Revise EULA section and update governing law heading
Updated the section titles and added End-User License Agreement details for Apple and Google.

--- a/index.html
+++ b/index.html
@@ -114,13 +114,33 @@
     We may update these Terms from time to time. Any changes will be posted on this page. Continued use of the App after changes become effective constitutes acceptance of the updated Terms.
   </p>
 
-  <h2>10. Governing Law</h2>
+  <h2>10. End-User License Agreement (EULA)</h2>
+  <h3>10.1 Apple App Store (iOS)</h3>
+  <p>For users downloading the App from the Apple App Store, your use of the App is also governed by the <a href="https://www.apple.com/legal/internet-services/itunes/dev/stdeula/">Apple Standard End User License Agreement</a>. In case of any conflict between these Terms and the Apple EULA, the Apple EULA will prevail for iOS users.</p>
+
+  <h3>10.2 Google Play Store (Android)</h3>
+  <p>Google does not provide a standard EULA. Therefore, for users downloading the App from Google Play, we provide the following license terms:</p>
+  <p>We grant you a limited, non-exclusive, non-transferable, revocable license to use the NemanjaAI mobile application solely for personal and non-commercial purposes, in accordance with these Terms.</p>
+  <p>You agree not to:</p>
+  <ul>
+    <li>Copy, modify, distribute, sell, or lease any part of the App;</li>
+    <li>Reverse engineer, decompile, or attempt to extract the source code of the App, except where permitted by law;</li>
+    <li>Use the App for unlawful, harmful, or abusive purposes;</li>
+    <li>Circumvent or interfere with security features of the App.</li>
+  </ul>
+  <p>This license terminates automatically if you violate these Terms.</p>
+
+  <h3>10.3 Third-Party Store Disclaimer</h3>
+  <p>This agreement is solely between you and NemanjaAI, not with Apple or Google. Neither Apple nor Google is responsible for support, maintenance, or legal claims related to the App.</p>
+</div>
+
+  <h2>11. Governing Law</h2>
   <p>
     These Terms are governed by and construed in accordance with the laws of the <strong>Republic of Serbia</strong>.
     Any disputes shall be subject to the exclusive jurisdiction of the competent courts in <strong>Belgrade, Serbia</strong>.
   </p>
 
-  <h2>11. Contact Information</h2>
+  <h2>12. Contact Information</h2>
   <p>
     If you have any questions about these Terms, please contact us at
     <a href="mailto:worthlens.app@gmail.com">worthlens.app@gmail.com</a>.
