--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
   <p>This license terminates automatically if you violate these Terms.</p>
 
   <h3>10.3 Third-Party Store Disclaimer</h3>
-  <p>This agreement is solely between you and NemanjaAI, not with Apple or Google. Neither Apple nor Google is responsible for support, maintenance, or legal claims related to the App.</p>
+  <p>This agreement is solely between you and WorthLens, not with Apple or Google. Neither Apple nor Google is responsible for support, maintenance, or legal claims related to the App.</p>
 </div>
 
   <h2>11. Governing Law</h2>
