--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 
   <h3>10.2 Google Play Store (Android)</h3>
   <p>Google does not provide a standard EULA. Therefore, for users downloading the App from Google Play, we provide the following license terms:</p>
-  <p>We grant you a limited, non-exclusive, non-transferable, revocable license to use the NemanjaAI mobile application solely for personal and non-commercial purposes, in accordance with these Terms.</p>
+  <p>We grant you a limited, non-exclusive, non-transferable, revocable license to use the WorthLens mobile application solely for personal and non-commercial purposes, in accordance with these Terms.</p>
   <p>You agree not to:</p>
   <ul>
     <li>Copy, modify, distribute, sell, or lease any part of the App;</li>
